force-app/main/default/objects/Inventory__c/fields/Active_Record__c.field-meta.xml
<CustomField>
    <fullName>Active_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Record</label>
    <type>Checkbox</type>
</CustomField>