force-app/main/default/objects/Inventory__c/fields/Add_industry_lookup__c.field-meta.xml
<CustomField>
    <fullName>Add_industry_lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add industry lookup</label>
    <type>Checkbox</type>
</CustomField>