force-app/main/default/objects/Inventory__c/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have listened to the call and all Additional Details are in the notes.</description>
    <inlineHelpText>I have listened to the call and all Additional Details are in the notes.</inlineHelpText>
    <label>Additional Details</label>
    <type>Checkbox</type>
</CustomField>