force-app/main/default/objects/Inventory__c/fields/Agent_Name_Correct__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have listened to the call and the agent name on the object is the correct Call Center agent.</description>
    <inlineHelpText>I have listened to the call and the agent name on the object is the correct Call Center agent.</inlineHelpText>
    <label>Agent Name Correct</label>
    <type>Checkbox</type>
</CustomField>