force-app/main/default/objects/Inventory__c/fields/AI_All_on_one_key__c.field-meta.xml
<CustomField>
    <fullName>AI_All_on_one_key__c</fullName>
    <label>(Locksmiths) All on one Key?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>