force-app/main/default/objects/Inventory__c/fields/AI_Are_you_planning_on_hiring_a_landscap__c.field-meta.xml
<CustomField>
    <fullName>AI_Are_you_planning_on_hiring_a_landscap__c</fullName>
    <label>Planning on hiring a landscape services?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>