force-app/main/default/objects/Inventory__c/fields/AI_Are_you_planning_on_hiring_a_Pool_Ser__c.field-meta.xml
<CustomField>
    <fullName>AI_Are_you_planning_on_hiring_a_Pool_Ser__c</fullName>
    <description>(Pool Maintenance)</description>
    <inlineHelpText>(Pool Maintenance)</inlineHelpText>
    <label>Hiring Pool Service or one-time cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>