force-app/main/default/objects/Inventory__c/fields/AI_Awning_Install__c.field-meta.xml
<CustomField>
    <fullName>AI_Awning_Install__c</fullName>
    <description>(Awnings)</description>
    <inlineHelpText>(Awnings)</inlineHelpText>
    <label>Awnings Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>