force-app/main/default/objects/Inventory__c/fields/AI_Awning_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Awning_Repair__c</fullName>
    <label>(Awnings) Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>