force-app/main/default/objects/Inventory__c/fields/AI_Blind_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Blind_install__c</fullName>
    <label>(Blinds/Shutters) Blind Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>