force-app/main/default/objects/Inventory__c/fields/AI_Carpet_Tile_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>AI_Carpet_Tile_Cleaning__c</fullName>
    <description>(Carpet/Tile Cleaning)</description>
    <inlineHelpText>(Carpet/Tile Cleaning)</inlineHelpText>
    <label>Carpet/Tile Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>