force-app/main/default/objects/Inventory__c/fields/AI_Carpet_Tile_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Carpet_Tile_Repair__c</fullName>
    <label>(Carpet/Tile) Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>