force-app/main/default/objects/Inventory__c/fields/AI_Current_problem__c.field-meta.xml
<CustomField>
    <fullName>AI_Current_problem__c</fullName>
    <label>Current problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>