force-app/main/default/objects/Inventory__c/fields/AI_Deck_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Deck_Repair__c</fullName>
    <label>Deck Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>