force-app/main/default/objects/Inventory__c/fields/AI_Do_you_plan_on_hiring_a_pest_control__c.field-meta.xml
<CustomField>
    <fullName>AI_Do_you_plan_on_hiring_a_pest_control__c</fullName>
    <description>(Pest Control)</description>
    <inlineHelpText>(Pest Control)</inlineHelpText>
    <label>Plan on hiring a pest control service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>