force-app/main/default/objects/Inventory__c/fields/AI_Doors__c.field-meta.xml
<CustomField>
    <fullName>AI_Doors__c</fullName>
    <description>It will hold the doors value</description>
    <label>Doors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doors - Custom</fullName>
            </value>
            <value>
                <fullName>Doors - Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>