force-app/main/default/objects/Inventory__c/fields/AI_Enclosed_or_open__c.field-meta.xml
<CustomField>
    <fullName>AI_Enclosed_or_open__c</fullName>
    <label>(Deck/Patio Build) Enclosed Or Open</label>
    <length>255</length>
    <type>Text</type>
</CustomField>