force-app/main/default/objects/Inventory__c/fields/AI_Energy_Audit__c.field-meta.xml
<CustomField>
    <fullName>AI_Energy_Audit__c</fullName>
    <label>(Energy Audit) Energy Audit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>