force-app/main/default/objects/Inventory__c/fields/AI_Energy_efficient_Insulation_installat__c.field-meta.xml
<CustomField>
    <fullName>AI_Energy_efficient_Insulation_installat__c</fullName>
    <label>Energy Aud) Energy Efficient Insulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>