force-app/main/default/objects/Inventory__c/fields/AI_Equipment_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Equipment_install__c</fullName>
    <label>(Security) Equipment Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>