force-app/main/default/objects/Inventory__c/fields/AI_Extension_of_current_system__c.field-meta.xml
<CustomField>
    <fullName>AI_Extension_of_current_system__c</fullName>
    <label>(Home Automation) Ext. Of Current System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>