force-app/main/default/objects/Inventory__c/fields/AI_Fence_Construction__c.field-meta.xml
<CustomField>
    <fullName>AI_Fence_Construction__c</fullName>
    <label>(Fencing) Fence Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>