force-app/main/default/objects/Inventory__c/fields/AI_Fence_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Fence_Repair__c</fullName>
    <label>(Fencing) Fence Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>