force-app/main/default/objects/Inventory__c/fields/AI_Flooring_refinish__c.field-meta.xml
<CustomField>
    <fullName>AI_Flooring_refinish__c</fullName>
    <label>(Flooring/Carpeting) Flooring Refinish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>