force-app/main/default/objects/Inventory__c/fields/AI_Front_or_Back_Yard__c.field-meta.xml
<CustomField>
    <fullName>AI_Front_or_Back_Yard__c</fullName>
    <description>(Synthetic Grass or Putting Green)</description>
    <inlineHelpText>(Synthetic Grass or Putting Green)</inlineHelpText>
    <label>Front or Back Yard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Synthetic Grass/Putting Green - Front Yard</fullName>
            </value>
            <value>
                <fullName>Synthetic Grass/Putting Green - Back Yard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>