force-app/main/default/objects/Inventory__c/fields/AI_Full_Kitchen__c.field-meta.xml
<CustomField>
    <fullName>AI_Full_Kitchen__c</fullName>
    <label>(Kitchen Remodel) Full Kitchen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>