force-app/main/default/objects/Inventory__c/fields/AI_Garage_door_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Garage_door_install__c</fullName>
    <label>(Garage Door) Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>