force-app/main/default/objects/Inventory__c/fields/AI_Garge_door_repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Garge_door_repair__c</fullName>
    <label>(Garage Door) Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>