force-app/main/default/objects/Inventory__c/fields/AI_Gutter_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>AI_Gutter_Cleaning__c</fullName>
    <label>(Gutters) Cleaning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>