force-app/main/default/objects/Inventory__c/fields/AI_hiring_a_landscaping_service__c.field-meta.xml
<CustomField>
    <fullName>AI_hiring_a_landscaping_service__c</fullName>
    <description>(Landscape (maintenance))</description>
    <inlineHelpText>(Landscape (maintenance))</inlineHelpText>
    <label>Planning on hiring a landscaping service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>