force-app/main/default/objects/Inventory__c/fields/AI_How_many_doors_do_you_have__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_doors_do_you_have__c</fullName>
    <label>(Home Automation) How Many Doors?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>