force-app/main/default/objects/Inventory__c/fields/AI_How_many_doors_need_rekeyed__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_doors_need_rekeyed__c</fullName>
    <label>(Locksmiths) Doors need rekeyed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>