force-app/main/default/objects/Inventory__c/fields/AI_How_many_family_members__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_family_members__c</fullName>
    <description>It will hold the value of number of family members</description>
    <inlineHelpText>(Dentist)</inlineHelpText>
    <label>How many family members?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dentist - 1 or 2?</fullName>
            </value>
            <value>
                <fullName>Dentist - 3 or 4?</fullName>
            </value>
            <value>
                <fullName>Dentist - 5 or 6?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>