force-app/main/default/objects/Inventory__c/fields/AI_How_many_feet_of_fencing__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_feet_of_fencing__c</fullName>
    <label>(Fencing) Appr. How Many Ft. of Fencing?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>