force-app/main/default/objects/Inventory__c/fields/AI_How_many_feet_of_gutters__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_feet_of_gutters__c</fullName>
    <label>(Gutters) Appr. How Many Ft. Of Gutters?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>