force-app/main/default/objects/Inventory__c/fields/AI_How_many_rooms_Or_what_areas__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_rooms_Or_what_areas__c</fullName>
    <label>(Painting) How many rooms? What areas?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>