force-app/main/default/objects/Inventory__c/fields/AI_How_many_units__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_units__c</fullName>
    <label>(HVAC Services) How Many Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>