force-app/main/default/objects/Inventory__c/fields/AI_How_many_windows__c.field-meta.xml
<CustomField>
    <fullName>AI_How_many_windows__c</fullName>
    <label>(Windows/Doors) How Many Windows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>