force-app/main/default/objects/Inventory__c/fields/AI_How_often_would_you_need_the_service__c.field-meta.xml
<CustomField>
    <fullName>AI_How_often_would_you_need_the_service__c</fullName>
    <description>It will holds service needed time</description>
    <label>How often would you need the service?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>House Cleaning - Weekly</fullName>
            </value>
            <value>
                <fullName>House Cleaning - Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>House Cleaning - Monthly</fullName>
            </value>
            <value>
                <fullName>House Cleaning - One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>