force-app/main/default/objects/Inventory__c/fields/AI_Immediate_Issue__c.field-meta.xml
<CustomField>
    <fullName>AI_Immediate_Issue__c</fullName>
    <label>(Pest Control) Immediate Issue?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>