force-app/main/default/objects/Inventory__c/fields/AI_Install_Deck__c.field-meta.xml
<CustomField>
    <fullName>AI_Install_Deck__c</fullName>
    <description>(Deck/Patio Build)</description>
    <inlineHelpText>(Deck/Patio Build)</inlineHelpText>
    <label>Deck Install/Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>