force-app/main/default/objects/Inventory__c/fields/AI_Installation_of_new_electrical__c.field-meta.xml
<CustomField>
    <fullName>AI_Installation_of_new_electrical__c</fullName>
    <label>(Electrician) Install. Of New Electrical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>