force-app/main/default/objects/Inventory__c/fields/AI_Is_it_interior_or_exterior__c.field-meta.xml
<CustomField>
    <fullName>AI_Is_it_interior_or_exterior__c</fullName>
    <description>(Painting)</description>
    <inlineHelpText>(Painting)</inlineHelpText>
    <label>Is it interior or exterior?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>