force-app/main/default/objects/Inventory__c/fields/AI_Landscape_Construction__c.field-meta.xml
<CustomField>
    <fullName>AI_Landscape_Construction__c</fullName>
    <label>(Landscape Install) Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>