force-app/main/default/objects/Inventory__c/fields/AI_Landscape_Design__c.field-meta.xml
<CustomField>
    <fullName>AI_Landscape_Design__c</fullName>
    <description>(Landscape Install)</description>
    <inlineHelpText>(Landscape Install)</inlineHelpText>
    <label>Landscape Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>