force-app/main/default/objects/Inventory__c/fields/AI_Maintain_pest_free__c.field-meta.xml
<CustomField>
    <fullName>AI_Maintain_pest_free__c</fullName>
    <label>Maintain pest free</label>
    <length>255</length>
    <type>Text</type>
</CustomField>