force-app/main/default/objects/Inventory__c/fields/AI_New_Gutter_Install__c.field-meta.xml
<CustomField>
    <fullName>AI_New_Gutter_Install__c</fullName>
    <label>(Gutters) New Gutter Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>