force-app/main/default/objects/Inventory__c/fields/AI_New_Install__c.field-meta.xml
<CustomField>
    <fullName>AI_New_Install__c</fullName>
    <label>(Home Automation) New Install</label>
    <length>25</length>
    <type>Text</type>
</CustomField>