force-app/main/default/objects/Inventory__c/fields/AI_New_Install_HVAC__c.field-meta.xml
<CustomField>
    <fullName>AI_New_Install_HVAC__c</fullName>
    <label>(HVAC Services) New Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>