force-app/main/default/objects/Inventory__c/fields/AI_Number_of_closets__c.field-meta.xml
<CustomField>
    <fullName>AI_Number_of_closets__c</fullName>
    <label>(Closet Org/Garage) Number of Closets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>