force-app/main/default/objects/Inventory__c/fields/AI_Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>AI_Number_of_Seats__c</fullName>
    <inlineHelpText>It will holds the number of seats value</inlineHelpText>
    <label>Number of Seats</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot Tub - 4 seats</fullName>
            </value>
            <value>
                <fullName>Hot Tub - 8 seats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>