force-app/main/default/objects/Inventory__c/fields/AI_of_Doors__c.field-meta.xml
<CustomField>
    <fullName>AI_of_Doors__c</fullName>
    <label>(Garage Doors) Number Of Doors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>