force-app/main/default/objects/Inventory__c/fields/AI_of_rooms__c.field-meta.xml
<CustomField>
    <fullName>AI_of_rooms__c</fullName>
    <label>(Flooring/Carpeting) Number of Rooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>