force-app/main/default/objects/Inventory__c/fields/AI_of_windows__c.field-meta.xml
<CustomField>
    <fullName>AI_of_windows__c</fullName>
    <description>(Blinds/Shutters)</description>
    <inlineHelpText>(Blinds/Shutters)</inlineHelpText>
    <label>Number Of Windows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>