force-app/main/default/objects/Inventory__c/fields/AI_One_Time_or_Ongoing__c.field-meta.xml
<CustomField>
    <fullName>AI_One_Time_or_Ongoing__c</fullName>
    <description>(Lawn &amp; Weed Control)</description>
    <inlineHelpText>(Lawn &amp; Weed Control)</inlineHelpText>
    <label>One Time or Ongoing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lawn &amp; Weed Control - One Time</fullName>
            </value>
            <value>
                <fullName>Lawn &amp; Weed Control - Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>