force-app/main/default/objects/Inventory__c/fields/AI_Ongoing_or_One_Time__c.field-meta.xml
<CustomField>
    <fullName>AI_Ongoing_or_One_Time__c</fullName>
    <description>It will hold the value of ongoing or one time</description>
    <inlineHelpText>(Chiropractor)</inlineHelpText>
    <label>Ongoing or One Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chiropractor - Ongoing</fullName>
            </value>
            <value>
                <fullName>Chiropractor - One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>