force-app/main/default/objects/Inventory__c/fields/AI_Partial_Bathroom__c.field-meta.xml
<CustomField>
    <fullName>AI_Partial_Bathroom__c</fullName>
    <label>(Bathroom Remodel) Partial Bathroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>