force-app/main/default/objects/Inventory__c/fields/AI_Partial_kitchen__c.field-meta.xml
<CustomField>
    <fullName>AI_Partial_kitchen__c</fullName>
    <label>(Kitchen Remodel) Partial Kitchen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>