force-app/main/default/objects/Inventory__c/fields/AI_Plumbing_fixture_repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Plumbing_fixture_repair__c</fullName>
    <label>(Plumbing) Fixture Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>