force-app/main/default/objects/Inventory__c/fields/AI_Plumbing_pipe_fitting__c.field-meta.xml
<CustomField>
    <fullName>AI_Plumbing_pipe_fitting__c</fullName>
    <label>(Plumbing) Pipe Fitting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>