force-app/main/default/objects/Inventory__c/fields/AI_Pool_Install__c.field-meta.xml
<CustomField>
    <fullName>AI_Pool_Install__c</fullName>
    <description>(Pool Install/Remodel)</description>
    <inlineHelpText>(Pool Install/Remodel)</inlineHelpText>
    <label>Pool Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>