force-app/main/default/objects/Inventory__c/fields/AI_Pool_Wiring__c.field-meta.xml
<CustomField>
    <fullName>AI_Pool_Wiring__c</fullName>
    <label>(Pool Installat/Remodel) Pool Wiring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>