force-app/main/default/objects/Inventory__c/fields/AI_Project_Details__c.field-meta.xml
<CustomField>
    <fullName>AI_Project_Details__c</fullName>
    <label>(Handyman) Project Details?</label>
    <type>TextArea</type>
</CustomField>