force-app/main/default/objects/Inventory__c/fields/AI_Project_Details_Home_Remodeling__c.field-meta.xml
<CustomField>
    <fullName>AI_Project_Details_Home_Remodeling__c</fullName>
    <label>(Home Remodeling) Project Details?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>