force-app/main/default/objects/Inventory__c/fields/AI_Repair_Deck__c.field-meta.xml
<CustomField>
    <fullName>AI_Repair_Deck__c</fullName>
    <label>(Deck/Patio Build) Deck Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>