force-app/main/default/objects/Inventory__c/fields/AI_Repair_of_old_electrical__c.field-meta.xml
<CustomField>
    <fullName>AI_Repair_of_old_electrical__c</fullName>
    <label>(Electrician) Repair of Old Electrical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>