force-app/main/default/objects/Inventory__c/fields/AI_Repair_Patio__c.field-meta.xml
<CustomField>
    <fullName>AI_Repair_Patio__c</fullName>
    <label>(Deck/Patio Build) Patio Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>