force-app/main/default/objects/Inventory__c/fields/AI_Repair_replacement__c.field-meta.xml
<CustomField>
    <fullName>AI_Repair_replacement__c</fullName>
    <label>(HVAC Services) Repair/Replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>