force-app/main/default/objects/Inventory__c/fields/AI_Rmaintenance__c.field-meta.xml
<CustomField>
    <fullName>AI_Rmaintenance__c</fullName>
    <label>(HVAC Services) Maintenance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>