force-app/main/default/objects/Inventory__c/fields/AI_Roof_Inspection__c.field-meta.xml
<CustomField>
    <fullName>AI_Roof_Inspection__c</fullName>
    <label>(Roofing) Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>