force-app/main/default/objects/Inventory__c/fields/AI_Roof_replacement__c.field-meta.xml
<CustomField>
    <fullName>AI_Roof_replacement__c</fullName>
    <label>(Roofing) Replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>