force-app/main/default/objects/Inventory__c/fields/AI_Shed_Install__c.field-meta.xml
<CustomField>
    <fullName>AI_Shed_Install__c</fullName>
    <label>(Sheds) Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>