force-app/main/default/objects/Inventory__c/fields/AI_Shelves__c.field-meta.xml
<CustomField>
    <fullName>AI_Shelves__c</fullName>
    <label>(Closet Org/Garage) Shelves</label>
    <length>255</length>
    <type>Text</type>
</CustomField>