force-app/main/default/objects/Inventory__c/fields/AI_Shutter_install__c.field-meta.xml
<CustomField>
    <fullName>AI_Shutter_install__c</fullName>
    <label>(Blinds/Shutters) Shutter Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>