force-app/main/default/objects/Inventory__c/fields/AI_Size_of_house__c.field-meta.xml
<CustomField>
    <fullName>AI_Size_of_house__c</fullName>
    <label>(House Cleaning) Size of House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>