force-app/main/default/objects/Inventory__c/fields/AI_Size_of_lot__c.field-meta.xml
<CustomField>
    <fullName>AI_Size_of_lot__c</fullName>
    <label>(Landscape Install) Size of lot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>