force-app/main/default/objects/Inventory__c/fields/AI_Size_of_shed__c.field-meta.xml
<CustomField>
    <fullName>AI_Size_of_shed__c</fullName>
    <label>(Sheds) Size of Shed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>