force-app/main/default/objects/Inventory__c/fields/AI_Storage_system__c.field-meta.xml
<CustomField>
    <fullName>AI_Storage_system__c</fullName>
    <label>(Closet Org/Garage) Storage System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>