force-app/main/default/objects/Inventory__c/fields/AI_System_design__c.field-meta.xml
<CustomField>
    <fullName>AI_System_design__c</fullName>
    <label>(Security) System Design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>