force-app/main/default/objects/Inventory__c/fields/AI_type_of_stone__c.field-meta.xml
<CustomField>
    <fullName>AI_type_of_stone__c</fullName>
    <label>(Granit/Marble) Type Of Stone?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>