force-app/main/default/objects/Inventory__c/fields/AI_Water_Softener_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Water_Softener_Repair__c</fullName>
    <label>(Water Softener ) Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>