force-app/main/default/objects/Inventory__c/fields/AI_What_part_of_bathroom__c.field-meta.xml
<CustomField>
    <fullName>AI_What_part_of_bathroom__c</fullName>
    <label>(Bathroom Remodel) Part Of Bathroom?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>