force-app/main/default/objects/Inventory__c/fields/AI_What_part_of_kitchen__c.field-meta.xml
<CustomField>
    <fullName>AI_What_part_of_kitchen__c</fullName>
    <label>(Kitchen Remodel) Part of the Kitchen?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>