force-app/main/default/objects/Inventory__c/fields/AI_What_type_of_pest_problem__c.field-meta.xml
<CustomField>
    <fullName>AI_What_type_of_pest_problem__c</fullName>
    <label>(Pest Control) What type of pest problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>