force-app/main/default/objects/Inventory__c/fields/AI_Window_Repair__c.field-meta.xml
<CustomField>
    <fullName>AI_Window_Repair__c</fullName>
    <label>(Windows/Doors) Window Repair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>