force-app/main/default/objects/Inventory__c/fields/AI_Windows__c.field-meta.xml
<CustomField>
    <fullName>AI_Windows__c</fullName>
    <description>It will holds the value of the windows</description>
    <label>Windows</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows - 5 or Less</fullName>
            </value>
            <value>
                <fullName>Windows - 6 or More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>