force-app/main/default/objects/Inventory__c/fields/alternativeNumber__c.field-meta.xml
<CustomField>
    <fullName>alternativeNumber__c</fullName>
    <description>•	What is an alternative Number my Technician can reach you at… Starting with the Area Code First!</description>
    <label>What is an alternative Number my Technic</label>
    <length>11</length>
    <type>Text</type>
</CustomField>