force-app/main/default/objects/Inventory__c/fields/AlternativeNumberPestInbound__c.field-meta.xml
<CustomField>
    <fullName>AlternativeNumberPestInbound__c</fullName>
    <description>What is an alternative Number my Technaician can reach you at… Starting with the Area Code First!</description>
    <label>What is an alternative Number my Technic</label>
    <length>11</length>
    <type>Text</type>
</CustomField>